# unicleaner

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  REVIEW.md  action.yml  devenv.nix  flake.nix  justfile  rustfmt.toml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  fuzz.yml  pr-check.yml  release.yml  test.yml  unicode-check.yml
.opencode/agent/: coverage-fuzz-engineer.md  research-planner.md  spec-implementer.md
.specify/memory/: constitution.md
benches/: clean_throughput.rs  large_repo.rs  medium_repo.rs  memory_usage.rs  scan_performance.rs  small_repo.rs  unicode_heavy.rs
docs/: DEVENV.md  DEVENV_SETUP.md  DOCKER.md  GITHUB_ACTION.md  NIX_BUILD_SYSTEM.md
examples/: github-workflow.yml  gitlab-ci.yml  unicleaner.toml
fuzz/: Cargo.toml  README.md  dictionary.txt
fuzz/fuzz_targets/: encoding_detection.rs  fuzz_block_resolve.rs  fuzz_clean.rs  fuzz_config.rs  fuzz_config_policy.rs  fuzz_file_scan.rs  fuzz_git_integration.rs  fuzz_glob_patterns.rs  fuzz_parallel_scanner.rs  fuzz_unicode.rs  fuzz_unicode_ranges.rs  fuzz_walker.rs  homoglyph_detector.rs
scripts/: verify-static.sh
specs/001-unicode-malicious-detector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-unicode-malicious-detector/checklists/: requirements.md
specs/001-unicode-malicious-detector/contracts/: cli-interface.yaml  json-schema.json
specs/002-enhance-unicode-tests/: IMPLEMENTATION_STATUS.md  data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/002-enhance-unicode-tests/checklists/: requirements.md
specs/003-named-unicode-ranges/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-named-unicode-ranges/checklists/: requirements.md
specs/004-fix-review-findings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fix-review-findings/checklists/: requirements.md
specs/005-branch-remediation/: evidence.md  plan.md  tasks.md
specs/006-cleaner-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-cleaner-api/checklists/: requirements.md
src/: lib.rs  main.rs
src/cleaner/: mod.rs  policy.rs
src/cli/: args.rs  clean.rs  exit_codes.rs  mod.rs  output.rs
src/config/: mod.rs  parser.rs  presets.rs  rules.rs  validation.rs
src/report/: formatter.rs  json.rs  markdown.rs  mod.rs  violation.rs
src/scanner/: encoding.rs  file_scanner.rs  git_diff.rs  mod.rs  parallel.rs  unicode_detector.rs  walker.rs
src/unicode/: blocks.rs  categories.rs  database.rs  malicious.rs  mod.rs  ranges.rs
tests/: common.rs  coverage_args_tests.rs  coverage_encoding_tests.rs  coverage_formatter_tests.rs  coverage_report_tests.rs  coverage_validation_tests.rs  integration.rs  output_coverage.rs  proptest.rs  trojan_source_tests.rs
tests/contract/: exit_codes.rs
tests/fixtures/: README.md
tests/fixtures/unicode_attacks/homoglyphs/: cyrillic.rs  fullwidth.rs  greek.rs  identifiers.rs  math_alphanumeric.rs  mixed_scripts.rs
tests/fixtures/unicode_attacks/normalization/: nfc_nfd.rs  nfkc_nfkd.rs
tests/fixtures/unicode_attacks/trojan_source/: combined_bidi.rs  fsi_attack.rs  lri_hiding.rs  pdi_attack.rs  rli_reorder.rs  rlo_attack.rs
tests/fixtures/unicode_attacks/zero_width/: bom.rs  combining.rs  separators.rs  zwj.rs  zwnj.rs  zwsp.rs
tests/integration/: block_config_tests.rs  cleaner_tests.rs  cli_clean_tests.rs  config_tests.rs  diff_tests.rs  edge_cases.rs  encoding_tests.rs  homoglyph_tests.rs  normalization_tests.rs  output_tests.rs  scan_tests.rs  trojan_source_tests.rs  zero_width_tests.rs
tests/integration/fixtures/bidi/: test_ltr_override.txt  trojan_source.rs
tests/integration/fixtures/clean/: comments.txt  simple.rs
tests/integration/fixtures/cleaner/: bidi.cleaned.txt  bidi.lossy.txt  bidi.txt  zwsp.cleaned.txt  zwsp.txt
tests/integration/fixtures/encodings/: generate_fixtures.py
tests/integration/fixtures/encodings/utf16be/: bidi_override.txt  homoglyph_cyrillic.txt  mixed_malicious.txt  zero_width_joiner.txt  zero_width_space.txt
tests/integration/fixtures/encodings/utf16le/: bidi_override.txt  homoglyph_cyrillic.txt  mixed_malicious.txt  zero_width_joiner.txt  zero_width_space.txt
tests/integration/fixtures/encodings/utf32be/: bidi_override.txt  homoglyph_cyrillic.txt  mixed_malicious.txt  zero_width_joiner.txt  zero_width_space.txt
tests/integration/fixtures/encodings/utf32le/: bidi_override.txt  homoglyph_cyrillic.txt  mixed_malicious.txt  zero_width_joiner.txt  zero_width_space.txt
tests/integration/fixtures/homoglyphs/: cyrillic_a.py
tests/integration/fixtures/zero_width/: test1.rs  test2.txt
tests/performance/: benchmarks.rs  memory.rs  memory_limits.rs  parallel_scaling.rs  time_limits.rs
tests/proptest/: README.md  bidi_properties.rs  config_properties.rs  encoding_properties.rs  homoglyph_properties.proptest-regressions  homoglyph_properties.rs  normalization.proptest-regressions  normalization.rs  scanner_determinism.rs  scanner_stability.rs  unicode_categories.rs  unicode_ranges.rs
tests/regression/: mod.rs
tests/unit/: mod.rs  proptest_unicode.rs
