[package]
name = "unicleaner"
version = "1.0.0-alpha1"
edition = "2024"
rust-version = "1.85"
authors = ["Unicleaner Contributors"]
description = "Detect malicious Unicode characters in source code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/poelzi/unicleaner"
keywords = ["security", "unicode", "scanner", "cli", "malicious"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/src/**/*",
    "/tests/**/*",
    "/benches/**/*",
    "/examples/unicleaner.toml",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE*",
    "/README.md",
    "/CHANGELOG.md",
]

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }

# Configuration
toml = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unicode handling
unicode-blocks = "0.1.9"

# Git integration via command-line (no dependencies on libgit2/openssl)
# Uses the 'git' command which is commonly available in development environments

# Encoding detection
encoding_rs = "0.8"

# Color output
owo-colors = { version = "4", features = ["supports-colors"] }
supports-color = "3"

ignore = "0.4"
globset = "0.4"

# Parallel processing
rayon = "1.8"
num_cpus = "1.16"

# Error handling
thiserror = "2"
strsim = "0.11.1"
once_cell = "1.21.4"

[dev-dependencies]
# Integration testing
assert_cmd = "2"
predicates = "3"
test-case = "3.3.1"

# Property-based testing
proptest = "1.4.0"

# Unicode normalization (tests)
unicode-normalization = "0.1"

# Benchmarking
criterion = "0.7"

# Test utilities
tempfile = "3"
walkdir = "2"
serial_test = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "unicleaner"
path = "src/main.rs"

[lib]
name = "unicleaner"
path = "src/lib.rs"

[[bench]]
name = "scan_performance"
harness = false

[[bench]]
name = "unicode_heavy"
harness = false

[[bench]]
name = "small_repo"
harness = false

[[bench]]
name = "medium_repo"
harness = false

[[bench]]
name = "large_repo"
harness = false

[[bench]]
name = "memory_usage"
harness = false
