[package]
name = "unicleaner-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.unicleaner]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_unicode"
path = "fuzz_targets/fuzz_unicode.rs"
test = false
doc = false

[[bin]]
name = "fuzz_config"
path = "fuzz_targets/fuzz_config.rs"
test = false
doc = false

[[bin]]
name = "fuzz_file_scan"
path = "fuzz_targets/fuzz_file_scan.rs"
test = false
doc = false
